# data-quality-sentry2

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  run_all.py
.github/workflows/: ci.yml
checks/: fixers.py  rules.yml  run_checks.py
data/: sample.csv
dqs/: cli.py
examples/: index.html  results.json
examples/failures/: orders_duplicate.csv
reports_v2_fix/: cleaned.csv  fix_report.json  index.html  results.json
reports_v2_fix/failures/: orders_amount_range.csv
reports_v2_fix/quarantine/: orders_amount_range_clipped.csv  orders_status_enum_invalid.csv
reports_v2_plain/: index.html  results.json
reports_v2_plain/failures/: orders_status_enum.csv  orders_updated_at_freshness.csv
summaries/: write_summary.py
tests/: test_rules.py
