[project]
name = "data-quality-sentry"
version = "3.1.0"
description = "Lightweight data quality checks with reports, safe fixes, and visualizations"
authors = [{ name = "MacroAcon" }]
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.1",
    "numpy==1.26.4",
    "jinja2==3.1.3",
    "python-dateutil==2.9.0.post0",
    "PyYAML==6.0.1",
]

[project.scripts]
dqs = "dqs.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
